--- a/docs/plotPres.rmd
+++ b/docs/plotPres.rmd
@@ -13,6 +13,9 @@ background-color: #303030 ! important;
 pre {
 background-color: #303030 ! important;
 }
+section {
+width: 652px;
+}
 div.sourceCode {
 background-color: #303030 ! important;
 }
@@ -32,9 +35,6 @@ font-weight: bold;
 }
 .hljs-string {
 color: #90a959;
-}
-section {
-width: 652px ! important;
 }
 ```
 
